--- a/Codigo/View/package.json
+++ b/Codigo/View/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.12.2",
+    "@mantine/form": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
