--- a/Codigo/View/package.json
+++ b/Codigo/View/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.13.0",
+    "@mantine/hooks": "^7.13.0",
+    "@mantine/notifications": "^7.13.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
@@ -17,7 +20,9 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
