--- a/Codigo/View/package.json
+++ b/Codigo/View/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@mantine/notifications": "^7.13.0",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
