fix: error rotas

--- a/Codigo/server/aluguel/src/main/resources/application.properties
+++ b/Codigo/server/aluguel/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=aluguel
 
 # Dados de conexão do PostgreSQL
-spring.datasource.url=jdbc:postgresql://ep-shiny-breeze-a4yhusqz-pooler.us-east-1.aws.neon.tech:5432/verceldb
+spring.datasource.url=jdbc:postgresql://ep-white-cloud-a44zh7bi-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
 spring.datasource.username=default
-spring.datasource.password=TO9ra4CmWuij
+spring.datasource.password=wuzRE4XAHg8a
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações do Hibernate
